--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,47 @@ configuracao.json
 
 # Arquivos do sistema
 .DS_Store
+Thumbs.db
+
+# Arquivos de build
+installer/
+*.exe
+*.msi
+
+# Virtual Environment
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Project specific
+*.db
+*.sqlite
+.env
+*.exe
+*.spec
+build/
+dist/
+
+# Arquivos de ambiente
+.env
+.venv
+venv/
+ENV/
+
+# Arquivos de banco de dados
+bancos_dados/
+*.db
+*.sqlite
+*.sqlite3
+
+# Arquivos de configuração local
+configuracao.json
+
+# Arquivos do sistema
+.DS_Store
 Thumbs.db 
